RESOLVED FIXED167890
[Soup] Long resources loaded by custom protocols sometimes never finish loading
https://bugs.webkit.org/show_bug.cgi?id=167890
Summary [Soup] Long resources loaded by custom protocols sometimes never finish loading
Carlos Garcia Campos
Reported 2017-02-06 10:14:54 PST
It's another bug that has appeared in WebKitSoupRequestInputStream after moving the custom protocols handling to the main thread. The problem is that webkitSoupRequestInputStreamPendingReadAsyncComplete invalidates pendingAsyncRead after calling webkitSoupRequestInputStreamReadAsyncResultComplete, but in some cases webkitSoupRequestInputStreamReadAsyncResultComplete completes the task in the same run loop iteration. In that case webkitSoupRequestInputStreamReadAsync is called again creating a new AsyncReadData that is destroyed right after webkitSoupRequestInputStreamReadAsyncResultComplete returns.
Attachments
Patch (4.52 KB, patch)
2017-02-06 10:19 PST, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2017-02-06 10:19:48 PST
Michael Catanzaro
Comment 2 2017-02-06 10:35:50 PST
Could this be the cause of bug #167887?
Carlos Garcia Campos
Comment 3 2017-02-06 22:04:58 PST
(In reply to comment #2) > Could this be the cause of bug #167887? I don't think so. I haven't looked at the yelp issue yet, but I would bet it's the same volume check.
Carlos Garcia Campos
Comment 4 2017-02-06 22:14:35 PST
Note You need to log in before you can comment on or make changes to this bug.